# voxel-simulation

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT.txt  NOTES.md  README.md  publish_server.bat  publish_server.sh  start_server.sh  trim.bat  watch_logs.bat  watch_logs.sh
client/: Cargo.toml  Config.toml  build.rs
client/assets/: options_menu.json
client/assets/shaders/: chunk_lod.wgsl  chunk_mesh.wgsl  chunk_visibility.wgsl  greedy_meshing.wgsl  noise.wgsl  sphere.wgsl  visible_chunks.wgsl
client/assets/textures/: generate_skybox.bat
client/src/: app.rs  config.rs  main.rs
client/src/helper/: database.rs  debug_gizmos.rs  egui_dock.rs  math.rs  mod.rs  octree.rs  vector_helper.rs
client/src/plugins/: mod.rs
client/src/plugins/big_space/: big_space_plugin.rs  mod.rs
client/src/plugins/camera/: camera_plugin.rs  mod.rs
client/src/plugins/camera/systems/: camera_system.rs
client/src/plugins/environment/: environment_plugin.rs  mod.rs
client/src/plugins/environment/systems/: camera_system.rs  environment_system.rs  mod.rs  planet.rs  planet_system.rs  voxel_system.rs
client/src/plugins/environment/systems/voxels/: atlas.rs  chunk.rs  chunk_io.rs  chunk_mesh_compute.rs  culling.rs  debug.rs  disk_backed_octree.rs  gpu_meshing.rs  helper.rs  lod.rs  lod_compute.rs  meshing.rs  meshing_gpu.rs  mod.rs  noise_compute.rs  octree.rs  queue_systems.rs  render_chunks.rs  rendering.rs  sphere_compute.rs  structure.rs  visibility_gpu.rs  visible_chunks_compute.rs
client/src/plugins/input/: input_plugin.rs  mod.rs
client/src/plugins/input/systems/: console.rs  flight.rs  mod.rs  movement.rs  network.rs  ui.rs  voxels.rs
client/src/plugins/network/: mod.rs  network_plugin.rs
client/src/plugins/network/systems/: callbacks.rs  connection.rs  database.rs  entities.rs  mod.rs  subscriptions.rs
client/src/plugins/ui/: mod.rs  ui_plugin.rs
client/src/plugins/ui/options/: mod.rs
client/src/plugins/ui/systems/: ui_system.rs
client/src/plugins/world/: systems.rs  types.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/types/: entity.rs  mod.rs  player.rs  rigidbody.rs  types.rs  vec3.rs
