[package]
name = "voxel-simulation"
version = "0.1.0"
edition = "2024"
description = "voxel-simulation"
repository = "https://github.com/eliasstepanik/voxel-simulation"
license = "MIT OR Apache-2.0"
build = "build.rs"


[dependencies]
bevy = { version = "0.15.1", features = ["jpeg", "trace_tracy", "trace_tracy_memory", "serialize"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
big_space = "0.9.1"
noise = "0.9.0"
itertools = "0.13.0"
bitvec = "1.0.1"
smallvec = "1.14.0"
once_cell = "1.21.3"
rayon = "1.10.0"
bincode = "1.3"
bevy_easy_compute = "0.15"
bytemuck = { version = "1", features = ["derive"] }

